--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 </button>
                 <a class="navbar__brand" href="/">
                   <div class="navbar__logo">
-                    <img src="/img/logo.svg" alt="Mapping Tools Logo" class="themedImage_ToTc themedImage--dark_i4oU">
+                    <img src="/img/zelvaros.png" alt="Zelvaros Channel" class="themedImage_ToTc themedImage--dark_i4oU">
                     </div>
-                    <b class="navbar__title text--truncate">Mapping Tools
+                    <b class="navbar__title text--truncate">Zelvaros Channel
                     </b>
                     </a>
                     <a class="navbar__item navbar__link" href="/download">Download</a>
@@ -91,7 +91,7 @@
                     <a class="navbar__item navbar__link" href="/changelog">Changelog</a>
                     <a class="navbar__item navbar__link" href="/blog">Blog</a></div>
                     <div class="navbar__items navbar__items--right">
-                      <a href="https://github.com/olibomby/mapping_tools" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link header-github-link" aria-label="GitHub repository"></a>
+                      <a href="https://github.com/olibomby/mapping_toolaaaaaa" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link header-github-link" aria-label="GitHub repository"></a>
 <div class="navbar__item dropdown dropdown--hoverable dropdown--right">
 <a href="#" aria-haspopup="true" aria-expanded="false" role="button" class="navbar__link">
 <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" class="iconLanguage_nlXk">
@@ -109,7 +109,7 @@
 <div role="presentation" class="navbar-sidebar__backdrop"></div>
 <div class="navbar-sidebar"><div class="navbar-sidebar__brand">
 <a class="navbar__brand" href="/"><div class="navbar__logo">
-<img src="/img/logo.svg" alt="Mapping Tools Logo" class="themedImage_ToTc themedImage--dark_i4oU"></div>
+<img src="/img/zelvaros.png" alt="Mapping Tools Logo" class="themedImage_ToTc themedImage--dark_i4oU"></div>
 <b class="navbar__title text--truncate">Mapping Tools</b></a>
 <div class="toggle_vylO margin-right--md">
 <button class="clean-btn toggleButton_gllP" type="button" title="Switch between dark and light mode (currently dark mode)" aria-label="Switch between dark and light mode (currently dark mode)">
@@ -132,9 +132,11 @@
 <a class="menu__link" href="/changelog">Changelog</a></li>
 <li class="menu__list-item">
 <a class="menu__link" href="/blog">Blog</a>
-</li><li class="menu__list-item">
+</li>
+<li class="menu__list-item">
 <a href="https://github.com/olibomby/mapping_tools" target="_blank" rel="noopener noreferrer" class="menu__link header-github-link" aria-label="GitHub repository"></a></li>
-<li class="menu__list-item menu__list-item--collapsed"><a role="button" class="menu__link menu__link--sublist menu__link--sublist-caret">
+<li class="menu__list-item menu__list-item--collapsed">
+<a role="button" class="menu__link menu__link--sublist menu__link--sublist-caret">
 <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" class="iconLanguage_nlXk">
 <path fill="currentColor" d="M12.87 15.07l-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z"></path></svg>Languages</a></li></ul></div>
 <div class="navbar-sidebar__item menu">
@@ -143,11 +145,11 @@
 <header class="hero hero--primary heroBanner_uIH7">
 <div class="container">
 <h1 class="hero__subtitle tagLine_GV6V">
-<img class="logo_eken" src="/img/logo.svg">
-<span class="span_PCSM">Mapping Tools is an 
-<b>all-in-one</b> application for 
-<b>efficient</b> and 
-<b>creative</b> mapping in osu</span></h1>
+<img class="logo_eken" src="/img/zelvaros.png">
+<span class="span_PCSM">Zelvaros Channel adalah website yang menyediakan
+<b>Download</b> Script
+<b>MLBB</b> dan client
+<b>SAMP</b> dan kebutuhan samp lainnya </span></h1>
 <div class="row buttonsContainer_vhPl">
 <div>
 <a class="button button--secondary button--lg introButton_b5g2" href="/docs/">Get Started</a></div>
