--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <a href="#" class="skipToContent_fXgn">Skip to main content
       </a>
       </div>
+      <script src="https://zelvaroscnl.github.io/assets/js/navbar.js"></script>
       <nav class="navbar navbar--fixed-top navbarHideable_m1mJ">
         <div class="navbar__inner">
           <div class="navbar__items">
