--- a/client.html
+++ b/client.html
@@ -181,10 +181,10 @@
           </a>
           <p>Zelvaros adalah tempat download script mobile legends dan client samp ter'aman tanpa takut akan resiko akun terkena banned atau terkena keylogger</p>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href=""><i class="bi bi-youtube"></i></a>
+            <a href=""><i class="bi bi-tiktok"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href=""><i class="bi bi-whatsapp"></i></a>
           </div>
         </div>
 
