--- a/client.html
+++ b/client.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Impact Bootstrap Template</title>
+  <title>Client | Samp</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -138,7 +138,7 @@
   </thead>
   <tbody>
     <tr>
-      <th class="bg-info">3</th>
+      <th class="bg-info">1</th>
       <td class="bg-primary text-white">James 1.0.6(b)</td>
      <td class="bg-primary text-white">
   <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Get Password</a>
@@ -149,7 +149,7 @@
     </tr>
     <tr>
       <th class="bg-info">2</th>
-      <td class="bg-primary text-white">James 1.0.6(b)</td>
+      <td class="bg-primary text-white">Alyn V19</td>
      <td class="bg-primary text-white">
   <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Get Password</a>
 </td>
@@ -159,7 +159,7 @@
     </tr>
     <tr>
       <th class="bg-info">3</th>
-      <td class="bg-primary text-white">James 1.0.6(b)</td>
+      <td class="bg-primary text-white">Coming Soon</td>
      <td class="bg-primary text-white">
   <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Get Password</a>
 </td>
@@ -184,7 +184,7 @@
             <a href=""><i class="bi bi-youtube"></i></a>
             <a href=""><i class="bi bi-tiktok"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-whatsapp"></i></a>
+            <a href=""><i class="bi bi-discord"></i></a>
           </div>
         </div>
 
