--- a/client.html
+++ b/client.html
@@ -127,11 +127,14 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Downlaod Client SAMP<br></h2>
+        <div class="table-responsive">
         <table class="table table-bordered">
   <thead>
     <tr>
       <th class="bg-danger">#</th>
       <th class="bg-danger">Client</th>
+      <th class="bg-danger">Thanks</th>
+      <th class="bg-danger">Type</th>
       <th class="bg-danger">Password</th>
       <th class="bg-danger">Download</th>
     </tr>
@@ -140,31 +143,37 @@
     <tr>
       <th class="bg-info">1</th>
       <td class="bg-primary text-white">James 1.0.6(b)</td>
+      <td class="bg-primary text-white">/</td>
+<td class="bg-primary text-white">No Ads</td>
      <td class="bg-primary text-white">
-  <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Get Password</a>
+  <a href="https://youtu.be/BQT5rJYLfIA" class="text-white">Get Password</a>
 </td>
       <td class="bg-primary text-white">
-  <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Download</a>
+  <a href="https://sub4unlock.co/rKwtpy" class="text-white">Download</a>
 </td>
     </tr>
     <tr>
       <th class="bg-info">2</th>
       <td class="bg-primary text-white">Alyn V19</td>
-     <td class="bg-primary text-white">
-  <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Get Password</a>
+</td>
+<td class="bg-primary text-white">Rifqi Muhammad Hanif</td>
+<td class="bg-primary text-white">No Ads</td>
+<td class="bg-primary text-white">
+  <a href="https://youtu.be/ThWqcKP6SDc" class="text-white">Get Password</a>
 </td>
       <td class="bg-primary text-white">
-  <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Download</a>
-</td>
+  <a href="https://sub4unlock.co/qyz7uidf" class="text-white">Download</a>
     </tr>
     <tr>
       <th class="bg-info">3</th>
       <td class="bg-primary text-white">Coming Soon</td>
+      <td class="bg-primary text-white">/</td>
+<td class="bg-primary text-white">No Ads</td>
      <td class="bg-primary text-white">
-  <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Get Password</a>
+  <a href="/" class="text-white">Get Password</a>
 </td>
       <td class="bg-primary text-white">
-  <a href="path/to/Dokumen_Presentasi.pptx" class="text-white">Download</a>
+  <a href="/" class="text-white">Download</a>
 </td>
     </tr>
   </tbody>
@@ -190,13 +199,12 @@
 
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Zelvaros Channel</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename"><a href="/">Zelvaros Channel</a></strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
 
