--- a/client.html
+++ b/client.html
@@ -374,7 +374,7 @@
      <td class="bg-primary text-white">
   <a href="/" class="text-white">Get Password</a>
 </td>
-  <td class="bg-primary text-white"onclick="openPasswordPopup('alynv163', 'https://sub4unlock.co/BQWw')">Download
+  <td class="bg-primary text-white"onclick="openPasswordPopup('alynv163', 'https://sfl.gl/Uen9dNe')">Download
 </td>
     </tr>
   </tbody>
