--- a/index.html
+++ b/index.html
@@ -539,8 +539,7 @@
           <p>Zelvaros adalah tempat download script mobile legends dan client samp ter'aman tanpa takut akan resiko akun terkena banned atau terkena keylogger</p>
           <div class="social-links d-flex mt-4">
             <a href="https://youtube.com/@zelvarossamp"><i class="bi bi-youtube"></i></a>
-            <a href=""><i class="bi bi-tiktok"></i></a>
-            <a href="https://www.tiktok.com/@zelvaroscnl"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.tiktok.com/@zelvaroscnl"><i class="bi bi-tiktok"></i></a>
             <a href="https://discord.gg/VneRss8wKs"><i class="bi bi-discord"></i></a>
             <a href="https://whatsapp.com/channel/0029VbBUKV8KAwEoVOSvfs1u"><i class="bi bi-whatsapp"></i></i></a>
           </div>
