--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                   <i class="bi bi-emoji-smile flex-shrink-0"></i>
                   <div>
                     <span data-purecounter-start="0" data-purecounter-end="958" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Pengguna Happy</strong> <span>Pengguna yang sudah menggunakan website</span></p>
+                    <p><strong>Pengguna Happy</strong> <span>yang sudah menggunakan website</span></p>
                   </div>
                 </div>
               </div><!-- End Stats Item -->
